--- a/pages/services/styles/automation.module.css
+++ b/pages/services/styles/automation.module.css
@@ -39,7 +39,7 @@
     margin-bottom: 80px;
 }
 
-.homeAutomation div:nth-child(1) {
+.homeAutomation span:nth-child(1) {
     max-height: 650px;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
     border-radius: 45px/15px;
