--- a/pages/services/styles/phoneSystems.module.css
+++ b/pages/services/styles/phoneSystems.module.css
@@ -23,7 +23,7 @@
     height: 150px;
 }
 
-.securitySystems div:nth-child(1) {
+.securitySystems span:nth-child(1) {
     max-height: 650px;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
     border-radius: 45px/15px;
